test/res/error/cd9_res1.tmp
[00;34m[[00m1[00;34m][00m  +  cd  - [00m
/Users/stdenis/Documents/42/42sh/42sh/test
[00;34m[[00m1[00;34m][00m  -  cd  - [00m
